fix: scrollbar screws up layout

--- a/src/components/Drawer.module.css
+++ b/src/components/Drawer.module.css
@@ -2,13 +2,14 @@
     flex: 1;
     background: var(--main-bg);
     height: 100%;
-    overflow-y: scroll;
     box-shadow: -32px 0 80px rgba(0, 0, 0, 0.45);
+    overflow-y: auto;
+    scrollbar-width: thin;
 
     @media screen and (max-width: 900px) {
         & {
             position: absolute;
-            overflow-y: scroll;
+            overflow-y: auto;
             height: 100%;
             inset: 0;
         }
@@ -44,7 +45,7 @@
     @media screen and (max-width: 900px) {
         & {
             position: absolute;
-            overflow-y: scroll;
+            overflow-y: auto;
             width: 100%;
             height: 100%;
             inset: 0;
@@ -66,7 +67,7 @@
     @media screen and (max-width: 900px) {
         & {
             position: absolute;
-            overflow-y: scroll;
+            overflow-y: auto;
             width: 100%;
             height: 100%;
             inset: 0;
