--- a/src/pages/ListPage.css
+++ b/src/pages/ListPage.css
@@ -1,7 +1,7 @@
 .list-page-container {
     display: flex;
     position: relative;
-    overflow-y: scroll;
+    overflow-y: auto;
     min-height: 100%;
     height: 100%;
 }
@@ -10,7 +10,8 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    overflow-y: scroll;
+    overflow-y: auto;
+    scrollbar-width: thin;
 }
 
 .list-header {
